--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "",
   "scripts": {
     "serve": "vue-cli-service serve",
+    "local-serve": "vue-cli-service serve --mode local",
     "build": "vue-cli-service build",
     "lint": "eslint ./src --ext .js,.vue",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -13,6 +14,7 @@
   "dependencies": {
     "@typescript-eslint/eslint-plugin": "^6.7.0",
     "@typescript-eslint/parser": "^6.7.0",
+    "axios": "^1.5.0",
     "core-js": "^3.8.3",
     "eslint-plugin-react": "^7.33.2",
     "vue": "^3.3.4",
